change in directory structure (more modular components)

--- a/angular-front/src/app/components/global/menu/menu.component.scss
+++ b/angular-front/src/app/components/global/menu/menu.component.scss
@@ -1,5 +1,5 @@
 @use '../toolbar/toolbar.component' as tb;
-@use '../../constants/colors.styles.scss' as colors;
+@use '../../../constants/colors.styles.scss' as colors;
 
 #left-menu {
     position: sticky;
