create user modal design

--- a/angular-front/src/app/components/layout/filters/treeFilter/filters.component.scss
+++ b/angular-front/src/app/components/layout/filters/treeFilter/filters.component.scss
@@ -1,7 +1,12 @@
 @use '../../../../constants/colors.styles' as colors;
+@use '../../../../styles/forms.styles' as forms;
 
 #filter-buttons-container {
     background-color: colors.$LIGHT_COLOR;
     box-shadow: 0 0 2px 0 rgba(0,0,0,0.2);
     border-radius: 5px;
+}
+
+#apply-filters-btn {
+    @include forms.button;
 }
