--- a/angular-front/src/app/constants/colors.styles.scss
+++ b/angular-front/src/app/constants/colors.styles.scss
@@ -6,3 +6,4 @@ $SEMI-DARK_COLOR: #3D4756;
 $NEUTRAL_COLOR: #A1ACBD;
 $LIGHT_COLOR: #FAFAFA;
 $BACKGROUND_COLOR: 'f5f5f5';
+$LINEAR-GRADIENT-MAIN: linear-gradient(135deg, $MAIN_COLOR, $MAIN_LIGHT_COLOR);
