--- a/angular-front/src/app/pages/auth/auth.component.html
+++ b/angular-front/src/app/pages/auth/auth.component.html
@@ -23,7 +23,7 @@
                 />
             </div>
             <input 
-                type="text" 
+                type="email" 
                 placeholder="Correo electrónico" 
                 formControlName="email" 
                 [style.border-color]="submitted && loginForm.get('email')?.errors ? 'red' : null"
