--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
                     Visualiza datos de los estudiantes de la universidad.
                 </p>
             </div>
-            <button mat-raised-button id="add-student-btn" class="">
+            <button mat-raised-button id="add-student-btn" (click)="openAddStudentDialog()">
                 <mat-icon class="mr-2">add</mat-icon>
                 Crea un usuario
             </button>
