--- a/angular-front/src/app/components/layout/filters/treeFilter/filters.component.html
+++ b/angular-front/src/app/components/layout/filters/treeFilter/filters.component.html
@@ -40,7 +40,7 @@
                         </cdk-tree>
                     </div>
                     <div class="d-flex row p-4 justify-content-end">
-                        <button (click)="onFilterClick()" mat-raised-button color="primary" style="width: fit-content">
+                        <button id="apply-filters-btn" (click)="onFilterClick()" mat-raised-button color="primary" style="width: fit-content">
                             <mat-icon class="mat-icon-rtl-mirror">done</mat-icon>
                             Aplicar filtros
                         </button>
