--- a/angular-front/src/app/components/layout/add-user-form/add-user-form.component.scss
+++ b/angular-front/src/app/components/layout/add-user-form/add-user-form.component.scss
@@ -52,6 +52,7 @@ $width-input: 80%;
     justify-content: flex-end;
     gap: 10px;
     width: $width-input;
+    margin: 0;
     padding: 25px 0;
 
     button[type="submit"] {
