--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.html
@@ -15,6 +15,6 @@
         <div class="mb-5">
             <app-filters (treeEmitter)="onTreeEmitter($event)"></app-filters>
         </div>
-        <app-table [filters]="filters"></app-table>
+        <app-table [students]="students" [filters]="filters"></app-table>
     </section>
 </div>
