--- a/angular-front/src/app/components/layout/add-user-form/add-user-form.component.scss
+++ b/angular-front/src/app/components/layout/add-user-form/add-user-form.component.scss
@@ -28,12 +28,31 @@ $width-input: 80%;
         width: $width-input;
 
         input {
+            width: 100%;
+        }
+
+        .full-name-item {
             width: 48%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        .full-name-item, label {
+            padding: 0;
         }
     }
 
-    input {
+    
+    .valid-input {
         @include forms.input;
+    }
+    
+    .invalid-input {
+        @include forms.invalidInput;
+    }
+
+    input {
         width: 80%;
     }
 
