--- a/angular-front/src/app/styles/forms.styles.scss
+++ b/angular-front/src/app/styles/forms.styles.scss
@@ -5,7 +5,7 @@
     border: solid 1px colors.$LIGHT_COLOR;
     box-shadow: 0 0 3px 0 rgba(0,0,0,0.2);
     border-radius: 5px;
-    padding: 2%;
+    padding: 10px;
 
     &::placeholder {
         color: colors.$NEUTRAL_COLOR;
@@ -14,6 +14,17 @@
         outline: none;
         border: solid 1px colors.$MAIN_COLOR;
     }
+}
+
+@mixin invalidInput {
+    @include input;
+    border: solid 1px red;
+
+    &:focus {
+        border: solid 1px red;
+        box-shadow: 0 0 10px 0 rgba(255,0,0,0.2);
+    }
+
 }
 
 @mixin button {
