--- a/angular-front/src/app/components/global/menu/menu.component.scss
+++ b/angular-front/src/app/components/global/menu/menu.component.scss
@@ -14,6 +14,10 @@
     }
     a { color: colors.$SEMI-DARK_COLOR; }
 
+    hr {
+        margin-bottom: 0;
+    }
+
     .nav {
         flex-wrap: nowrap;
         
