--- a/angular-front/src/app/components/layout/dashboard/dashboard.component.html
+++ b/angular-front/src/app/components/layout/dashboard/dashboard.component.html
@@ -2,15 +2,17 @@
     <section id="dashboard" class="container">
         <div class="d-flex justify-content-between align-items-center">
             <div id="dashboard-title">
-                <h1>{{'👨🏼‍🎓 Usuarios'}}</h1>
-                <p>
+                <h1 [appFontSize]="'x-large'">{{'👨🏼‍🎓 Usuarios'}}</h1>
+                <p [appFontSize]="'medium'">
                     Visualiza datos de los estudiantes de la universidad.
                 </p>
             </div>
-            <button mat-raised-button id="add-student-btn" (click)="openAddStudentDialog()">
-                <mat-icon class="mr-2">add</mat-icon>
-                Crea un usuario
-            </button>
+            <p id="add-student-btn-text" [appFontSize]="'medium'" class="text-end">
+                <button mat-raised-button id="add-student-btn" (click)="openAddStudentDialog()">
+                    <mat-icon [appFontSize]="'medium'" class="mr-2">add</mat-icon>
+                    Crea un usuario
+                </button>
+            </p>
         </div>
         <div class="mb-5">
             <app-filters (treeEmitter)="onTreeEmitter($event)"></app-filters>
