--- a/angular-front/src/app/components/global/menu/menu.component.html
+++ b/angular-front/src/app/components/global/menu/menu.component.html
@@ -28,7 +28,11 @@
 </div>
 <p style="left: 15px; bottom:0; position: absolute">
     <button id="open-close-button"
-            class="btn btn-secondary" type="button" data-bs-toggle="collapse" data-bs-target="#collapsed-left-menu"
+            class="btn btn-secondary" 
+            [appFontSize]="'small'"
+            type="button" 
+            data-bs-toggle="collapse" 
+            data-bs-target="#collapsed-left-menu"
             onClick="this.innerHTML = this.innerHTML === '➕' ? 'Ver menos' : '➕'"
             >
         Ver menos
