--- a/angular-front/src/app/components/layout/table/table.component.html
+++ b/angular-front/src/app/components/layout/table/table.component.html
@@ -1,60 +1,77 @@
-<div class="table-responsive">
-    <table class="table table-light rounded rounded-3 overflow-hidden">
-        <thead class="table">
-            <tr [appFontSize]="'medium'">
-                <th scope="col">#</th>
-                <th scope="col">Nombre</th>
-                <th scope="col">E-mail</th>
-                <th scope="col">Carrera</th>
-                <th scope="col">Fecha de ingreso</th>
-                <th scope="col">Promedio</th>
-                <th scope="col">Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            <ng-container *ngIf="students | filter:filters as filteredStudents; else noStudents">
-                <tr [appFontSize]="'medium'" *ngFor="let student of filteredStudents; let i = index">
-                    <th scope="row">{{i+1}}</th>
-                    <td>{{student | fullName}}</td>
-                    <td>{{student.email}}</td>
-                    <td>{{student.career}}</td>
-                    <td>{{student.admissionDate | date: 'dd/MM/yyyy'}}</td>
-                    <ng-container *ngIf="student.averageGrade as grade else noGrade">
-                        <td [appInRangeStyleValue]="grade"
-                            [appInRangeStyle]="[
-                                {style: 'color', styleValue: 'red', min: 0, max: 4},
-                                {style: 'color', styleValue: 'orange', min: 4, max: 6},
-                                {style: 'color', styleValue: 'green', min: 6, max: 10},
-                            ]"
-                        >
-                            {{grade | number: '1.1-2'}}
-                        </td>
-                    </ng-container>
-                    <ng-template #noGrade>
-                        <td class="text-center">-</td>
-                    </ng-template>
-                    <td>
-                        <div class="d-flex row justify-content-center">
-                            <button (click)="onEditStudent(student.id)" mat-mini-fab color="primary">
-                                <mat-icon>edit</mat-icon>
-                            </button>
-                            <button (click)="onDeleteStudent(student.id)" mat-icon-button color="accent">
-                                <mat-icon>delete</mat-icon>
-                            </button>
-                        </div>
-                    </td>
-                </tr>
-                <ng-container *ngIf="!filteredStudents.length" [ngTemplateOutlet]="noStudents"></ng-container>
+<table 
+    mat-table 
+    matSort 
+    (matSortChange)="onSortData($event)"
+    [dataSource]="dataSource" 
+    class="mat-elevation-z8"
+>
+    <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by id"> No. </th>
+        <td mat-cell *matCellDef="let student"> {{student.id}} </td>
+      </ng-container>
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by name"> Nombre </th>
+      <td mat-cell *matCellDef="let student"> {{student | fullName}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by email">
+         E-mail 
+      </th>
+      <td mat-cell *matCellDef="let student"> {{student.email}} </td>
+    </ng-container>
+  
+    <ng-container matColumnDef="career">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by career"> Carrera </th>
+        <td mat-cell *matCellDef="let student"> {{student.career}} </td>
+      </ng-container>
+
+    <ng-container matColumnDef="admissionDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by admission date">
+            Fecha de ingreso 
+        </th>
+        <td mat-cell *matCellDef="let student"> {{student.admissionDate | date:'dd/MM/yyyy'}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="averageGrade">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by admission average grade">
+            Promedio 
+        </th>
+        <td mat-cell *matCellDef="let student">
+            <ng-container *ngIf="student.averageGrade as grade else noGrade">
+                <span [appFontSize]="'large'"></span>
+                    {{grade | number: '1.1-2'}}
             </ng-container>
-
-            <ng-template #noStudents>
-                <tr>
-                    <td colspan="7" class="text-center pt-4">
-                        <p>Ningún estudiante satisface los criterios de búsqueda</p>
-                    </td>
-                </tr>
+            <ng-template #noGrade>
+                <td class="text-center">-</td>
             </ng-template>
+        </td>
+    </ng-container>
 
-        </tbody>
-    </table>
-</div>
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Acciones         </th>
+        <td mat-cell *matCellDef="let student">
+             <div class="d-flex row justify-content-center align-items-center">
+                 <button 
+                    [style]="{transform: 'scale(0.6)'}" 
+                    (click)="onEditStudent(student.id)" 
+                    mat-mini-fab color="primary"
+                >
+                     <mat-icon>edit</mat-icon>
+                 </button>
+                 <button (click)="onDeleteStudent(student.id)" mat-icon-button color="accent">
+                     <mat-icon>delete</mat-icon>
+                 </button>
+             </div>
+        </td>
+      </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 showFirstLastButtons
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
