--- a/angular-front/src/app/components/layout/add-user-form/add-user-form.component.html
+++ b/angular-front/src/app/components/layout/add-user-form/add-user-form.component.html
@@ -4,14 +4,12 @@
     </h1>
     <div mat-dialog-content>
         <form id="add-user-form" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
-            <!-- <label for="user-image">Imagen</label>
-            <input id="user-image" name ="user-image" type="file" accept="image/*" /> -->
             <div id="full-name-container" class="d-flex row">
                 <div class="full-name-item">
                     <label for="name">Nombre</label>
                     <input 
                         class="valid-input"
-                        [appValidInput]="!(submitted && !!formGroup.get('name')?.errors)" 
+                        [appValidInput]="isValidInput('name')"
                         type="text" placeholder="Nombre" 
                         formControlName="name" 
                         name="name" 
@@ -22,7 +20,7 @@
                     <label for="surname">Apellido</label>
                     <input 
                         class="valid-input"
-                        [appValidInput]="!(submitted && !!formGroup.get('surname')?.errors)"  
+                        [appValidInput]="isValidInput('surname')"
                         type="text" 
                         formControlName="surname" 
                         placeholder="Apellido" 
@@ -35,7 +33,7 @@
                 <label for="email">Correo electrónico</label>
                 <input 
                     class="valid-input"
-                    [appValidInput]="!(submitted && !!formGroup.get('email')?.errors)"  
+                    [appValidInput]="isValidInput('email')"
                     type="email" 
                     formControlName="email" 
                     placeholder="Correo electrónico" 
@@ -47,7 +45,7 @@
                 <label for="password">Contraseña</label>
                 <input 
                     class="valid-input"
-                    [appValidInput]="!(submitted && !!formGroup.get('password')?.errors)"  
+                    [appValidInput]="isValidInput('password')"
                     type="password" 
                     formControlName="password" 
                     placeholder="Contraseña" 
@@ -59,7 +57,7 @@
                 <label for="birthDate">Fecha de nacimiento</label>
                 <input 
                     class="valid-input"
-                    [appValidInput]="!(submitted && !!formGroup.get('birthDate')?.errors)"  
+                    [appValidInput]="isValidInput('birthDate')"
                     type="date"
                     formControlName="birthDate" 
                     placeholder="Fecha de nacimiento" 
@@ -71,7 +69,7 @@
                 <label for="admissionDate">Fecha de admisión</label>
                 <input 
                     class="valid-input"
-                    [appValidInput]="!(submitted && !!formGroup.get('admissionDate')?.errors)"  
+                    [appValidInput]="isValidInput('admissionDate')"
                     type="date" 
                     formControlName="admissionDate" 
                     placeholder="Fecha de ingreso" 
@@ -83,7 +81,7 @@
                 <label for="phone">Teléfono</label>
                 <input 
                     class="valid-input"
-                    [appValidInput]="!(submitted && !!formGroup.get('phone')?.errors)"  
+                    [appValidInput]="isValidInput('phone')"
                     type="phone" 
                     formControlName="phone" 
                     placeholder="Teléfono" 
@@ -95,7 +93,7 @@
                 <label for="address">Ciudad</label>
                 <input 
                     class="valid-input"
-                    [appValidInput]="!(submitted && !!formGroup.get('city')?.errors)"  
+                    [appValidInput]="isValidInput('city')"
                     type="text" 
                     formControlName="city" 
                     placeholder="Ciudad" 
@@ -107,7 +105,7 @@
                 <label for="address">Carrera</label>
                 <input 
                     class="valid-input"
-                    [appValidInput]="!(submitted && !!formGroup.get('career')?.errors)"  
+                    [appValidInput]="isValidInput('career')" 
                     type="text" 
                     formControlName="career" 
                     placeholder="Carrera" 
@@ -124,12 +122,7 @@
 </div>
 <div *ngIf="formGroup.invalid && submitted">
     <app-toast 
-        [messages] = "[
-            formGroup.get('name')?.errors?.['required'] ? 'El nombre es requerido' : null,
-            formGroup.get('surname')?.errors?.['required'] ? 'El apellido es requerido' : null,
-            formGroup.get('email')?.errors?.['required'] ? 'El correo electrónico es requerido' : null,
-            formGroup.get('password')?.errors?.['required'] ? 'La contraseña es requerida' : null,
-        ]"
+        [messages] = "getErrorMessages()"
     >
     </app-toast>
 </div>
