--- a/angular-front/src/app/components/layout/table/table.component.scss
+++ b/angular-front/src/app/components/layout/table/table.component.scss
@@ -3,6 +3,7 @@
 
 #students-table {   
     overflow-x: auto;
+    border-radius: 5px 5px 0 0;
 
     table {
         width: 100%;
@@ -11,16 +12,10 @@
     
         .mat-mdc-header-row {
             background-color: colors.$MAIN_COLOR;
-    
-            .mat-mdc-header-cell {
-                color: colors.$LIGHT_COLOR !important;
-            }
-            
+            .mat-mdc-header-cell { color: colors.$LIGHT_COLOR !important }
         }
     
-        tbody {
-            --bs-table-bg: colors.$LIGHT_COLOR;
-        }
+        tbody { --bs-table-bg: colors.$LIGHT_COLOR }
     }
     
     .mat-paginator-container {
@@ -32,7 +27,12 @@
         margin: 0;
     }
 
-    mat-mdc-paginator-range-actions {
-        color: colors.$MAIN_COLOR;
-    }
+    mat-mdc-paginator-range-actions { color: colors.$MAIN_COLOR }
+
+}
+
+#students-paginator-container {
+    border-radius: 0 0 5px 5px;
+    overflow: hidden;
+    width: 100%;
 }
